--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,28 @@
 <html>
 <head>
   <title>CGPA & SGPA Calculator</title>
-  <!-- Firebase SDKs using ES Modules -->
+  <!-- Firebase SDKs using ES Modules from the official CDN -->
   <script type="module">
-    // Import Firebase functions
+    // Import the functions you need from the Firebase SDKs you need.
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-analytics.js";
     import { getFirestore, collection, getDocs, addDoc, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-firestore.js";
 
+    // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyCOa8Lfm1xlAMRKRB-dJLWim2DTrru_vGY",
-      authDomain: "tiet-cgpa-calculator.firebaseapp.com",
-      projectId: "tiet-cgpa-calculator",
-      storageBucket: "tiet-cgpa-calculator.firebasestorage.app",
-      messagingSenderId: "526872741510",
-      appId: "1:526872741510:web:8da7793fc8a3d6e1bd7307",
-      measurementId: "G-TNHM7S1KH1"
+      apiKey: "AIzaSyAfpUT9nAUfW5laVmK7HWkhWUeLaKp6og4",
+      authDomain: "tiet-cgpa-calculator-6049a.firebaseapp.com",
+      projectId: "tiet-cgpa-calculator-6049a",
+      storageBucket: "tiet-cgpa-calculator-6049a.firebasestorage.app",
+      messagingSenderId: "922296897245",
+      appId: "1:922296897245:web:cda1dfbdb7af4087d65534",
+      measurementId: "G-Y77XZRYJHN"
     };
 
-    // Initialize Firebase and Firestore
+    // Initialize Firebase
     const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
     const db = getFirestore(app);
 
     // Mapping of grades to grade points
@@ -148,7 +151,7 @@
 </head>
 <body>
   <h2>CGPA & SGPA Calculator</h2>
-  <!-- The form prevents page refresh by using event.preventDefault() -->
+  <!-- The form uses event.preventDefault() to prevent page refresh -->
   <form onsubmit="event.preventDefault(); addCourse();">
     <label for="courseName">Course Name:</label>
     <input type="text" id="courseName" required><br>
