--- a/public/index.html
+++ b/public/index.html
@@ -2,34 +2,18 @@
 <html>
 <head>
   <title>CGPA & SGPA Calculator</title>
-  <!-- Firebase SDKs using ES Modules from the official CDN -->
   <script type="module">
-    // Import the functions you need from the Firebase SDKs you need.
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-analytics.js";
-    import { getFirestore, collection, getDocs, addDoc, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-firestore.js";
+    // Import Supabase client
+    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyAfpUT9nAUfW5laVmK7HWkhWUeLaKp6og4",
-      authDomain: "tiet-cgpa-calculator-6049a.firebaseapp.com",
-      projectId: "tiet-cgpa-calculator-6049a",
-      storageBucket: "tiet-cgpa-calculator-6049a.firebasestorage.app",
-      messagingSenderId: "922296897245",
-      appId: "1:922296897245:web:cda1dfbdb7af4087d65534",
-      measurementId: "G-Y77XZRYJHN"
-    };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-    const db = getFirestore(app);
+    // Initialize Supabase with your credentials
+    const supabaseUrl = "https://your-project-ref.supabase.co";
+    const supabaseKey = "your-anon-public-key";
+    const supabase = createClient(supabaseUrl, supabaseKey);
 
     // Mapping of grades to grade points
     const gradePoints = { "A": 10, "A-": 9, "B": 8, "B-": 7, "C": 6, "E": 2, "I": 0 };
 
-    // Function to add a course to Firestore
     async function addCourse() {
       console.log("addCourse() called");
       const name = document.getElementById("courseName").value;
@@ -44,9 +28,12 @@
       }
 
       try {
-        await addDoc(collection(db, "courses"), { name, code, credit, semester, grade });
-        console.log("Course added successfully");
-        // Clear form inputs after adding
+        const { data, error } = await supabase
+          .from('courses')
+          .insert([{ name, code, credit, semester, grade }]);
+        if (error) throw error;
+        console.log("Course added:", data);
+        // Clear form inputs
         document.getElementById("courseName").value = "";
         document.getElementById("courseCode").value = "";
         document.getElementById("courseCredit").value = "";
@@ -58,20 +45,18 @@
       }
     }
 
-    // Function to load courses and update CGPA/SGPA displays
     async function loadCourses() {
       try {
-        const snapshot = await getDocs(collection(db, "courses"));
-        let courses = [];
-        let bestAttempts = {};  // For overall CGPA: best attempt per course code
-        let semesterData = {};  // For SGPA: accumulate credits and points per semester
+        const { data: courses, error } = await supabase
+          .from('courses')
+          .select('*');
+        if (error) throw error;
 
-        snapshot.forEach(docSnap => {
-          let course = docSnap.data();
-          course.id = docSnap.id;
-          courses.push(course);
+        let bestAttempts = {};
+        let semesterData = {};
 
-          // For SGPA: accumulate if grade is not "I"
+        courses.forEach(course => {
+          // For SGPA
           if (!semesterData[course.semester]) {
             semesterData[course.semester] = { credits: 0, points: 0 };
           }
@@ -80,8 +65,7 @@
             semesterData[course.semester].credits += course.credit;
             semesterData[course.semester].points += gp * course.credit;
           }
-
-          // For CGPA: only store best attempt (exclude grade "I")
+          // For CGPA: best attempt per course code
           if (course.grade !== "I") {
             let gp = gradePoints[course.grade] || 0;
             if (!bestAttempts[course.code] || gp > gradePoints[bestAttempts[course.code].grade]) {
@@ -90,7 +74,7 @@
           }
         });
 
-        // Calculate overall CGPA using best attempts
+        // Calculate overall CGPA
         let totalCredits = 0, totalPoints = 0;
         for (let code in bestAttempts) {
           let course = bestAttempts[code];
@@ -100,7 +84,7 @@
         const cgpa = totalCredits ? (totalPoints / totalCredits).toFixed(2) : "N/A";
         document.getElementById("cgpa").innerText = cgpa;
 
-        // Build the course list table
+        // Build course list table
         const tableContent = courses.map(c => `
           <tr>
             <td>${c.name}</td>
@@ -108,12 +92,12 @@
             <td>${c.credit}</td>
             <td>${c.semester}</td>
             <td>${c.grade}</td>
-            <td><button onclick="deleteCourse('${c.id}')">Delete</button></td>
+            <td><button onclick="deleteCourse(${c.id})">Delete</button></td>
           </tr>
         `).join("");
         document.getElementById("courseTable").innerHTML = tableContent;
 
-        // Build SGPA display for each semester
+        // Build SGPA display
         const sgpaContent = Object.keys(semesterData).map(sem => {
           const data = semesterData[sem];
           const sgpa = data.credits ? (data.points / data.credits).toFixed(2) : "N/A";
@@ -126,17 +110,19 @@
       }
     }
 
-    // Function to delete a course from Firestore
     async function deleteCourse(id) {
       try {
-        await deleteDoc(doc(db, "courses", id));
+        const { error } = await supabase
+          .from('courses')
+          .delete()
+          .eq('id', id);
+        if (error) throw error;
         loadCourses();
       } catch (error) {
         console.error("Error deleting course:", error);
       }
     }
 
-    // Load courses when the window loads
     window.onload = loadCourses;
   </script>
   <style>
@@ -151,7 +137,6 @@
 </head>
 <body>
   <h2>CGPA & SGPA Calculator</h2>
-  <!-- The form uses event.preventDefault() to prevent page refresh -->
   <form onsubmit="event.preventDefault(); addCourse();">
     <label for="courseName">Course Name:</label>
     <input type="text" id="courseName" required><br>
