--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CGPA & SGPA Calculator</title>
+  <title>CGPA & SGPA Calculator (Supabase)</title>
   <script type="module">
-    // Import Supabase client
+    // Import the Supabase client from a CDN
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
-    // Initialize Supabase with your credentials
-    const supabaseUrl = "https://your-project-ref.supabase.co";
-    const supabaseKey = "your-anon-public-key";
+    // Replace with your actual Supabase project details:
+    const supabaseUrl = 'https://nnmkmfgcjlnitdothxrn.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5ubWttZmdjamxuaXRkb3RoeHJuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDI0NjcxODIsImV4cCI6MjA1ODA0MzE4Mn0.8EXHTIICH5UvmRsR6aEtDMRQ7tAP96uGgJ_PBnK7ZBQ';
     const supabase = createClient(supabaseUrl, supabaseKey);
 
     // Mapping of grades to grade points
     const gradePoints = { "A": 10, "A-": 9, "B": 8, "B-": 7, "C": 6, "E": 2, "I": 0 };
 
+    // Function to add a course using Supabase
     async function addCourse() {
       console.log("addCourse() called");
       const name = document.getElementById("courseName").value;
@@ -23,7 +24,7 @@
       const grade = document.getElementById("grade").value;
 
       if (!name || !code || isNaN(credit) || !semester || !grade) {
-        alert("Please enter all fields!");
+        alert("Please fill all fields!");
         return;
       }
 
@@ -32,7 +33,7 @@
           .from('courses')
           .insert([{ name, code, credit, semester, grade }]);
         if (error) throw error;
-        console.log("Course added:", data);
+        console.log("Course added successfully:", data);
         // Clear form inputs
         document.getElementById("courseName").value = "";
         document.getElementById("courseCode").value = "";
@@ -40,23 +41,25 @@
         document.getElementById("semesterCode").value = "";
         document.getElementById("grade").selectedIndex = 0;
         loadCourses();
-      } catch (error) {
-        console.error("Error adding course:", error);
+      } catch (err) {
+        console.error("Error adding course:", err);
       }
     }
 
+    // Function to load courses and update CGPA/SGPA displays
     async function loadCourses() {
       try {
         const { data: courses, error } = await supabase
           .from('courses')
           .select('*');
         if (error) throw error;
+        console.log("Loaded courses:", courses);
 
-        let bestAttempts = {};
-        let semesterData = {};
+        let bestAttempts = {};  // For overall CGPA: best attempt per course code
+        let semesterData = {};  // For SGPA: accumulate credits and points per semester
 
         courses.forEach(course => {
-          // For SGPA
+          // For SGPA: accumulate if grade is not "I"
           if (!semesterData[course.semester]) {
             semesterData[course.semester] = { credits: 0, points: 0 };
           }
@@ -65,7 +68,7 @@
             semesterData[course.semester].credits += course.credit;
             semesterData[course.semester].points += gp * course.credit;
           }
-          // For CGPA: best attempt per course code
+          // For CGPA: track best attempt per course code (excluding grade "I")
           if (course.grade !== "I") {
             let gp = gradePoints[course.grade] || 0;
             if (!bestAttempts[course.code] || gp > gradePoints[bestAttempts[course.code].grade]) {
@@ -74,17 +77,17 @@
           }
         });
 
-        // Calculate overall CGPA
+        // Calculate overall CGPA using best attempts
         let totalCredits = 0, totalPoints = 0;
         for (let code in bestAttempts) {
-          let course = bestAttempts[code];
+          let course = bestAttempts[course.code] || bestAttempts[code];
           totalCredits += course.credit;
           totalPoints += gradePoints[course.grade] * course.credit;
         }
         const cgpa = totalCredits ? (totalPoints / totalCredits).toFixed(2) : "N/A";
         document.getElementById("cgpa").innerText = cgpa;
 
-        // Build course list table
+        // Build the course list table
         const tableContent = courses.map(c => `
           <tr>
             <td>${c.name}</td>
@@ -97,7 +100,7 @@
         `).join("");
         document.getElementById("courseTable").innerHTML = tableContent;
 
-        // Build SGPA display
+        // Build SGPA display for each semester
         const sgpaContent = Object.keys(semesterData).map(sem => {
           const data = semesterData[sem];
           const sgpa = data.credits ? (data.points / data.credits).toFixed(2) : "N/A";
@@ -105,11 +108,12 @@
         }).join("");
         document.getElementById("sgpa").innerHTML = sgpaContent;
 
-      } catch (error) {
-        console.error("Error loading courses:", error);
+      } catch (err) {
+        console.error("Error loading courses:", err);
       }
     }
 
+    // Function to delete a course from Supabase
     async function deleteCourse(id) {
       try {
         const { error } = await supabase
@@ -118,11 +122,17 @@
           .eq('id', id);
         if (error) throw error;
         loadCourses();
-      } catch (error) {
-        console.error("Error deleting course:", error);
+      } catch (err) {
+        console.error("Error deleting course:", err);
       }
     }
 
+    // Expose functions for inline usage
+    window.addCourse = addCourse;
+    window.deleteCourse = deleteCourse;
+    window.loadCourses = loadCourses;
+
+    // Load courses on page load
     window.onload = loadCourses;
   </script>
   <style>
@@ -136,7 +146,8 @@
   </style>
 </head>
 <body>
-  <h2>CGPA & SGPA Calculator</h2>
+  <h2>CGPA & SGPA Calculator (Supabase)</h2>
+  <!-- Use inline event handler; we exposed addCourse on window -->
   <form onsubmit="event.preventDefault(); addCourse();">
     <label for="courseName">Course Name:</label>
     <input type="text" id="courseName" required><br>
