--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CGPA & SGPA Calculator (TIET)</title>
+  <title>CGPA & SGPA Calculator </title>
   <script type="module">
     /* 1) Import the Supabase client from a CDN */
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
@@ -52,6 +52,7 @@
 
     /* 5) loadCourses(): Fetch courses & calculate CGPA/SGPA */
     async function loadCourses() {
+      console.log("loadCourses() called");
       try {
         const { data: courses, error } = await supabase
           .from("courses")
@@ -85,7 +86,7 @@
         // Calculate overall CGPA
         let totalCredits = 0, totalPoints = 0;
         for (let code in bestAttempts) {
-          const course = bestAttempts[code];  // Access by loop variable 'code'
+          const course = bestAttempts[code];
           const gp = gradePoints[course.grade] || 0;
           totalCredits += course.credit;
           totalPoints += gp * course.credit;
@@ -101,7 +102,8 @@
             <td>${c.credit}</td>
             <td>${c.semester}</td>
             <td>${c.grade}</td>
-            <td><button onclick="deleteCourse(${c.id})">Delete</button></td>
+            <!-- Store course ID in data-id for event delegation -->
+            <td><button class="delete-btn" data-id="${c.id}">Delete</button></td>
           </tr>
         `).join("");
         document.getElementById("courseTable").innerHTML = tableContent;
@@ -121,6 +123,7 @@
 
     /* 6) deleteCourse(): Remove a course from Supabase by ID */
     async function deleteCourse(id) {
+      console.log("deleteCourse() called with ID:", id);
       try {
         const { error } = await supabase
           .from("courses")
@@ -133,13 +136,27 @@
       }
     }
 
-    // Expose functions globally for inline usage
-    window.addCourse = addCourse;
-    window.deleteCourse = deleteCourse;
-    window.loadCourses = loadCourses;
+    /* 7) Attach event listeners in JS (no inline HTML) */
+    document.addEventListener("DOMContentLoaded", () => {
+      // a) Handle form submission for adding courses
+      const courseForm = document.getElementById("courseForm");
+      courseForm.addEventListener("submit", (e) => {
+        e.preventDefault();
+        addCourse();
+      });
 
-    // Load courses when the page loads
-    window.onload = loadCourses;
+      // b) Handle delete button clicks using event delegation
+      const tableBody = document.getElementById("courseTable");
+      tableBody.addEventListener("click", (e) => {
+        if (e.target.classList.contains("delete-btn")) {
+          const courseId = e.target.getAttribute("data-id");
+          deleteCourse(courseId);
+        }
+      });
+
+      // c) Load courses on page load
+      loadCourses();
+    });
   </script>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
@@ -153,8 +170,7 @@
 </head>
 <body>
   <h2>CGPA & SGPA Calculator (Supabase)</h2>
-  <!-- Use inline event handler; we exposed addCourse() on window -->
-  <form onsubmit="event.preventDefault(); addCourse();">
+  <form id="courseForm">
     <label for="courseName">Course Name:</label>
     <input type="text" id="courseName" required><br>
     
